--- a/水滴效果.html
+++ b/水滴效果.html
@@ -91,7 +91,7 @@
             left: 0;
             width: 100vw;
             height: 100vh;
-            background-image: url(https://images.unsplash.com/photo-1440688807730-73e4e2169fb8?dpr=1&auto=format&fit=crop&w=1500&h=1001&q=80&cs=tinysrgb&crop=);
+            background-image: url(http://pic1.win4000.com/wallpaper/2018-08-15/5b7394fd0dfc0.jpg);
             background-attachment: fixed;
             background-position: center center;
             /* background-size: auto; */
@@ -121,7 +121,7 @@
             width: 20vmin;
             height: 20vmin;
             border-radius: 50%;
-            background-image: url(https://images.unsplash.com/photo-1440688807730-73e4e2169fb8?dpr=1&auto=format&fit=crop&w=1500&h=1001&q=80&cs=tinysrgb&crop=);
+            background-image: url(http://pic1.win4000.com/wallpaper/2018-08-15/5b7394fd0dfc0.jpg);
             background-attachment: fixed;
             background-position: center center;
             transform: translate3d(0, 0, 0);
