--- a/五星好评/五星好评.html
+++ b/五星好评/五星好评.html
@@ -26,12 +26,12 @@
         <![endif]-->
     <div>
         <span>课程打分：</span>
-        <div class="start-list" onmouseover="rate(this,event)">
-            <img src="./img/start.png" alt="">
-            <img src="./img/start.png" alt="">
-            <img src="./img/start.png" alt="">
-            <img src="./img/start.png" alt="">
-            <img src="./img/start.png" alt="">
+        <div class="start-list">
+            <img data-index="1" src="./img/start.png" alt="">
+            <img data-index="2" src="./img/start.png" alt="">
+            <img data-index="3" src="./img/start.png" alt="">
+            <img data-index="4" src="./img/start.png" alt="">
+            <img data-index="5" src="./img/start.png" alt="">
         </div>
     </div>
     <script src="./js/jquery-3.3.1.min.js"></script>
