左侧导航栏

--- a/左侧导航右侧内容/index.html
+++ b/左侧导航右侧内容/index.html
@@ -23,19 +23,21 @@
     <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-    <ul>
-        <li>
-            <a class="hover" href="">个人信息</a>
-        </li>
-        <li>
-            <a href="">我的课程</a>
-        </li>
-        <li>
-            <a href="">我的测试</a>
-        </li>
-        <div id="lanPos"></div>
-    </ul>
-    <div class="right-content vedio-card">
+    <div class="left-nav">
+        <ul>
+            <li>
+                <a class="hover" href="./myInfo.html">个人信息</a>
+            </li>
+            <li>
+                <a href="./myclasses.html">我的课程</a>
+            </li>
+            <li>
+                <a href="./mytests.html">我的测试</a>
+            </li>
+            <div id="lanPos"></div>
+        </ul>
+    </div>
+    <div class="my-tests-right">
     </div>
     <script src="" async defer></script>
 </body>
