--- a/倒计时.html
+++ b/倒计时.html
@@ -18,28 +18,32 @@
 <body>
 
     <h2>剩余时间:</h2>
-    <div id="countDown1"></div>
+    <h2 id="has-time"></h2>
     <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
     <script src="./jquery-3.3.1.js"></script>
     <script language="javascript" type="text/javascript">
-        // console.log(new Date().getTime() + 7200000);
-        var timer = null;
-        var t=0;
-        // Math.round(new Date().getTime()/1000);
+        // 倒计时
+        let timer = null,
+            t = 0,
+            time = 0,
+            timeout=false,
+            getDate = new Date();
         function getCountDown(timestamp) {
-            
             timer = setInterval(function () {
                 var nowTime = new Date();
                 var endTime = new Date(timestamp);
 
                 t = endTime.getTime() - nowTime.getTime();
-                //            var d=Math.floor(t/1000/60/60/24);
-                var hour = Math.floor(t / 1000 / 60 / 60 % 24);
-                var min = Math.floor(t / 1000 / 60 % 60);
-                var sec = Math.floor(t / 1000 % 60);
-
+                var hour = Math.floor((t / 1000 / 60 / 60) % 24);
+                var min = Math.floor((t / 1000 / 60) % 60);
+                var sec = Math.floor((t / 1000) % 60);
+                if (hour == 0 && min == 0 && sec == 0) {
+                    // timeout = true;
+                    // $(".submit-btn").click();
+                    clearInterval(timer);
+                }
                 if (hour < 10) {
                     hour = "0" + hour;
                 }
@@ -50,22 +54,27 @@
                     sec = "0" + sec;
                 }
                 var countDownTime = hour + ":" + min + ":" + sec;
-                $("#countDown1").html(countDownTime);
-
+                $("#has-time").html(countDownTime);
             }, 1000);
         }
 
         //调用函数：
-        getCountDown(new Date().getTime() + 1000 * 60 * 60 * 2);
-        document.addEventListener('visibilitychange', function() {
-            if(document.visibilityState=='hidden'){
-                console.log('hidden');
-                clearInterval(timer);
-            }else{
-                console.log('show');
-                getCountDown(new Date().getTime() + t);
-            }
-        }, false);
+        getCountDown(new Date().getTime() + 1000 * 60 * 45);
+        document.addEventListener(
+            "visibilitychange",
+            function () {
+                if (document.visibilityState == "hidden") {
+                    clearInterval(timer);
+                } else {
+                    if (timeout) {
+                        clearInterval(timer);
+                    } else {
+                        getCountDown(new Date().getTime() + t);
+                    }
+                }
+            },
+            false
+        );
     </script>
 </body>
 
